secound banner section added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,36 @@
 
    <main>
 
+    <!-- my failure section -->
+
+    <section class="my-failure">
+
+        <div class="secound-banner">
+            <div class="secound-banner-image">
+            <img src="/images/person.png" alt="failure-person">
+            </div>
+            <div class="secound-banner-title">
+                <h2>My failures of previous year</h2>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <div class="icon-banner">
+                  <p><span><img src="./images/icon.png" alt="tick-icon"></span> Contrary to popular belief, is not simply.</p>
+                  <p><span><img src="./images/icon.png" alt="tick-icon"></span> Contrary to popular belief</p>
+                  <p><span><img src="./images/icon.png" alt="tick-icon"></span> Contrary to popular , is not simply.</p>
+                  <p><span><img src="./images/icon.png" alt="tick-icon"></span> Contrary to popular belief, is not simply.</p>
+                  <p><span><img src="./images/icon.png" alt="tick-icon"></span> Contrary to popular simply.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+
+    </section>
+
+    <section>
+
+    </section>
+
    </main>
 
    <footer>
