--- a/index.html
+++ b/index.html
@@ -47,17 +47,71 @@
         </div>
     </section>
 
-    <section>
+    <!-- my plan section start -->
 
+    <section class="my plans">
+        
+        <h2 class="plan-title">My Plans</h2>
+
+        <div class="all-my-plans">
+            <div class="plan-icon">
+                <img src="/images/icons/web.png" alt="">
+                <h4>Web Development</h4>
+                <h6 class="description">I want to start</h6>
+            </div>
+            <div class="plan-icon">
+                <img src="/images/icons/js.png" alt="">
+                <h4>Javascript</h4>
+                <h6 class="description">I want to learn</h6>
+            </div>
+            <div class="plan-icon">
+                <img src="/images/icons/smoke.png" alt="">
+                <h4>Smoking Habit</h4>
+                <h6 class="description">I want to end</h6>
+            </div>
+            <div class="plan-icon">
+                <img src="/images/icons/ecom.png" alt="">
+                <h4>ecommerce</h4>
+                <h6 class="description">I want to develop</h6>
+            </div>
+        </div>
     </section>
 
-    <section>
+        <!-- my plan section end -->
 
+        <!-- mini banner section start -->
+
+    <section class="mini-banner">
+
+        <h3>Awlays keep a positive mindset</h3>
+        <button>call now</button>
     </section>
+
+    <!-- mini banner section end -->
 
    </main>
 
+   <!-- future and subscribe section start -->
+
    <footer>
+
+    <div class="future-and-subscribe">
+
+        <div class="future">
+            <h2>feture</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <p>Email : info@gmail.com</p>
+            <p>Phone : 01500 00 00 00</p>
+            <img src="/images/icons/fb.png" alt="">
+            <img src="/images/icons/twitter.png" alt="">
+            <img src="/images/icons/youtube.png" alt="">
+        </div>
+        <div class="subscribe">
+            <h3>subscribe</h3>
+            <button>Enter your emai</button>
+            <button>subscribe</button>
+        </div>
+    </div>
 
    </footer>
 </body>
