--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
    <!-- Main section start -->
 
-   <main>
+   <main class="container">
 
     <!-- my failure section -->
 
-    <section class="my-failure">
+    <section class="my-failure ">
 
         <div class="secound-banner">
             <div class="secound-banner-image">
@@ -49,7 +49,7 @@
 
     <!-- my plan section start -->
 
-    <section class="my plans">
+    <section class="my plans container">
         
         <h2 class="plan-title">My Plans</h2>
 
@@ -95,10 +95,10 @@
 
    <footer>
 
-    <div class="future-and-subscribe">
+    <div class="future-and-subscribe container">
 
         <div class="future">
-            <h2>feture</h2>
+            <h2>future</h2>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
             <p>Email : info@gmail.com</p>
             <p>Phone : 01500 00 00 00</p>
@@ -108,11 +108,15 @@
         </div>
         <div class="subscribe">
             <h3>subscribe</h3>
-            <button>Enter your emai</button>
+            <form action="">
+                <input type="email" placeholder="Enter your email">
+            </form>
             <button>subscribe</button>
         </div>
     </div>
-
    </footer>
+
+   <!-- future and subscribe section end -->
+
 </body>
 </html>
